Senior DevOps Engineer/InfraStack.template.json
{
 "Resources": {
  "infradevA81375B1": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.10.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "infra-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/Resource"
   }
  },
  "infradevprivatesubnetSubnet1Subnet017C472D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.10.0.0/26",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/private-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet1/Subnet"
   }
  },
  "infradevprivatesubnetSubnet1RouteTable6D3BFED9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/private-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet1/RouteTable"
   }
  },
  "infradevprivatesubnetSubnet1RouteTableAssociation749E845C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevprivatesubnetSubnet1RouteTable6D3BFED9"
    },
    "SubnetId": {
     "Ref": "infradevprivatesubnetSubnet1Subnet017C472D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet1/RouteTableAssociation"
   }
  },
  "infradevprivatesubnetSubnet1DefaultRoute8A617EF5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevprivatesubnetSubnet1RouteTable6D3BFED9"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "infradevpublicsubnetSubnet1NATGatewayCB86BF89"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet1/DefaultRoute"
   }
  },
  "infradevprivatesubnetSubnet2Subnet2EE7BAE7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.10.0.64/26",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/private-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet2/Subnet"
   }
  },
  "infradevprivatesubnetSubnet2RouteTable90263E41": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/private-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet2/RouteTable"
   }
  },
  "infradevprivatesubnetSubnet2RouteTableAssociationFBE71F65": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevprivatesubnetSubnet2RouteTable90263E41"
    },
    "SubnetId": {
     "Ref": "infradevprivatesubnetSubnet2Subnet2EE7BAE7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet2/RouteTableAssociation"
   }
  },
  "infradevprivatesubnetSubnet2DefaultRouteC26518A5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevprivatesubnetSubnet2RouteTable90263E41"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "infradevpublicsubnetSubnet1NATGatewayCB86BF89"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/private-subnetSubnet2/DefaultRoute"
   }
  },
  "infradevpublicsubnetSubnet1Subnet969CB34E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.10.0.128/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet1/Subnet"
   }
  },
  "infradevpublicsubnetSubnet1RouteTableDB1D84B0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet1/RouteTable"
   }
  },
  "infradevpublicsubnetSubnet1RouteTableAssociationA660FF6A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevpublicsubnetSubnet1RouteTableDB1D84B0"
    },
    "SubnetId": {
     "Ref": "infradevpublicsubnetSubnet1Subnet969CB34E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet1/RouteTableAssociation"
   }
  },
  "infradevpublicsubnetSubnet1DefaultRouteAEEEAF27": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevpublicsubnetSubnet1RouteTableDB1D84B0"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "infradevIGW7686494E"
    }
   },
   "DependsOn": [
    "infradevVPCGW2BD628CB"
   ],
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet1/DefaultRoute"
   }
  },
  "infradevpublicsubnetSubnet1EIP0B146C36": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet1/EIP"
   }
  },
  "infradevpublicsubnetSubnet1NATGatewayCB86BF89": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "infradevpublicsubnetSubnet1Subnet969CB34E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "infradevpublicsubnetSubnet1EIP0B146C36",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/public-subnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "infradevpublicsubnetSubnet1DefaultRouteAEEEAF27",
    "infradevpublicsubnetSubnet1RouteTableAssociationA660FF6A"
   ],
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet1/NATGateway"
   }
  },
  "infradevpublicsubnetSubnet2Subnet191C63F0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.10.0.192/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet2/Subnet"
   }
  },
  "infradevpublicsubnetSubnet2RouteTableBE8532C8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "InfraStack/infra-dev/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet2/RouteTable"
   }
  },
  "infradevpublicsubnetSubnet2RouteTableAssociationD39752A2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevpublicsubnetSubnet2RouteTableBE8532C8"
    },
    "SubnetId": {
     "Ref": "infradevpublicsubnetSubnet2Subnet191C63F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet2/RouteTableAssociation"
   }
  },
  "infradevpublicsubnetSubnet2DefaultRouteE1449F95": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "infradevpublicsubnetSubnet2RouteTableBE8532C8"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "infradevIGW7686494E"
    }
   },
   "DependsOn": [
    "infradevVPCGW2BD628CB"
   ],
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/public-subnetSubnet2/DefaultRoute"
   }
  },
  "infradevIGW7686494E": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "infra-dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/IGW"
   }
  },
  "infradevVPCGW2BD628CB": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "infradevA81375B1"
    },
    "InternetGatewayId": {
     "Ref": "infradevIGW7686494E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/infra-dev/VPCGW"
   }
  },
  "ECSClusterF96A0E06": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/ECS-Cluster/Resource"
   }
  },
  "FLASKtaskdefTaskRoleC2D47771": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-task-def/TaskRole/Resource"
   }
  },
  "FLASKtaskdefEF7959B5": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         "975055404715.dkr.ecr.eu-central-1.amazonaws.com/infra:",
         {
          "Ref": "SsmParameterValueTaskFlaskIMAGETAGC96584B6F00A464EAD1953AFF4B05118Parameter"
         }
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "FLASKtaskdefFLASKdevLogGroupA3D3C12B"
        },
        "awslogs-stream-prefix": "FLASK-dev",
        "awslogs-region": "eu-central-1"
       }
      },
      "Name": "FLASK-dev",
      "PortMappings": [
       {
        "ContainerPort": 5000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "FLASKtaskdefExecutionRoleFD73CD15",
      "Arn"
     ]
    },
    "Family": "InfraStackFLASKtaskdef4DF116D9",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "FLASKtaskdefTaskRoleC2D47771",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-task-def/Resource"
   }
  },
  "FLASKtaskdefExecutionRoleFD73CD15": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-task-def/ExecutionRole/Resource"
   }
  },
  "FLASKtaskdefExecutionRoleDefaultPolicy5A1272A8": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:*",
        "ecr:BatchGetImage",
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FLASKtaskdefFLASKdevLogGroupA3D3C12B",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FLASKtaskdefExecutionRoleDefaultPolicy5A1272A8",
    "Roles": [
     {
      "Ref": "FLASKtaskdefExecutionRoleFD73CD15"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-task-def/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "FLASKtaskdefFLASKdevLogGroupA3D3C12B": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-task-def/FLASK-dev/LogGroup/Resource"
   }
  },
  "FLASKservicesgCDF67FB2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "InfraStack/FLASK-service-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:5000",
      "FromPort": 5000,
      "IpProtocol": "tcp",
      "ToPort": 5000
     }
    ],
    "VpcId": {
     "Ref": "infradevA81375B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-service-sg/Resource"
   }
  },
  "FLASKservicesgfromInfraStackALBSecurityGroup7C78C7E85000C15231CD": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 5000,
    "GroupId": {
     "Fn::GetAtt": [
      "FLASKservicesgCDF67FB2",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ALBSecurityGroup8B8624F8",
      "GroupId"
     ]
    },
    "ToPort": 5000
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-service-sg/from InfraStackALBSecurityGroup7C78C7E8:5000"
   }
  },
  "FLASKservicesgfromInfraStackFLASKlbsgdevD521353A500054909B88": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 5000,
    "GroupId": {
     "Fn::GetAtt": [
      "FLASKservicesgCDF67FB2",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FLASKlbsgdevC04FA0B3",
      "GroupId"
     ]
    },
    "ToPort": 5000
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-service-sg/from InfraStackFLASKlbsgdevD521353A:5000"
   }
  },
  "ServiceD69D759B": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ECSClusterF96A0E06"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "FLASK-dev",
      "ContainerPort": 5000,
      "TargetGroupArn": {
       "Ref": "ALBListenerTargetGroupD5D64FBA"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FLASKservicesgCDF67FB2",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "infradevprivatesubnetSubnet1Subnet017C472D"
       },
       {
        "Ref": "infradevprivatesubnetSubnet2Subnet2EE7BAE7"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "FLASKtaskdefEF7959B5"
    }
   },
   "DependsOn": [
    "ALBListener3B99FF85",
    "ALBListenerTargetGroupD5D64FBA"
   ],
   "Metadata": {
    "aws:cdk:path": "InfraStack/Service/Service"
   }
  },
  "ServiceTaskCountTarget23E25614": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 6,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "ECSClusterF96A0E06"
       },
       "/",
       {
        "Fn::GetAtt": [
         "ServiceD69D759B",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": "arn:aws:iam::975055404715:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/Service/TaskCount/Target/Resource"
   }
  },
  "ServiceTaskCountTargetCpuScalingCC8A5DF6": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "InfraStackServiceTaskCountTargetCpuScalingD5DD0B7B",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "ServiceTaskCountTarget23E25614"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "ScaleInCooldown": 60,
     "ScaleOutCooldown": 60,
     "TargetValue": 75
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/Service/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "ServiceTaskCountTargetMemoryScalingEA4B07C8": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "InfraStackServiceTaskCountTargetMemoryScalingC8BEE9DD",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "ServiceTaskCountTarget23E25614"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageMemoryUtilization"
     },
     "ScaleInCooldown": 60,
     "ScaleOutCooldown": 60,
     "TargetValue": 75
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/Service/TaskCount/Target/MemoryScaling/Resource"
   }
  },
  "FLASKlbsgdevC04FA0B3": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FLASK app sg",
    "GroupName": "FLASK-lb-sg-dev",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "FLASKservicesgCDF67FB2",
           "GroupId"
          ]
         },
         ":ALL TRAFFIC"
        ]
       ]
      },
      "IpProtocol": "-1",
      "SourceSecurityGroupId": {
       "Fn::GetAtt": [
        "FLASKservicesgCDF67FB2",
        "GroupId"
       ]
      }
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "infradevA81375B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/FLASK-lb-sg-dev/Resource"
   }
  },
  "ALBAEE750D2": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ALBSecurityGroup8B8624F8",
       "GroupId"
      ]
     },
     {
      "Fn::GetAtt": [
       "FLASKlbsgdevC04FA0B3",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "infradevpublicsubnetSubnet1Subnet969CB34E"
     },
     {
      "Ref": "infradevpublicsubnetSubnet2Subnet191C63F0"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "infradevpublicsubnetSubnet1DefaultRouteAEEEAF27",
    "infradevpublicsubnetSubnet1RouteTableAssociationA660FF6A",
    "infradevpublicsubnetSubnet2DefaultRouteE1449F95",
    "infradevpublicsubnetSubnet2RouteTableAssociationD39752A2"
   ],
   "Metadata": {
    "aws:cdk:path": "InfraStack/ALB/Resource"
   }
  },
  "ALBSecurityGroup8B8624F8": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB InfraStackALB167951E8",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "infradevA81375B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/ALB/SecurityGroup/Resource"
   }
  },
  "ALBSecurityGrouptoInfraStackFLASKservicesg20D3E71D5000D409FD2F": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "ALBSecurityGroup8B8624F8",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FLASKservicesgCDF67FB2",
      "GroupId"
     ]
    },
    "FromPort": 5000,
    "ToPort": 5000
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/ALB/SecurityGroup/to InfraStackFLASKservicesg20D3E71D:5000"
   }
  },
  "ALBListener3B99FF85": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ALBListenerTargetGroupD5D64FBA"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ALBAEE750D2"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/ALB/Listener/Resource"
   }
  },
  "ALBListenerTargetGroupD5D64FBA": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/",
    "Matcher": {
     "HttpCode": "200-302"
    },
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "infradevA81375B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/ALB/Listener/TargetGroup/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31STW/CMAz9LbuHbLDDdmWMISQ0VXTiOrnBdIaSoHyApqr/fW7T0rJJO9l+dvzs50zk06N8uIOLG6ntYVRQJsvUgzoIhj5LVBNZbk5KzHZ6k8xEYukMHtOQafQ12HtrEzx+QFZgj/fY1DmjCDwZfS0WScgKUn2L+TKpzTv4BZNc4LuOltqj5YIBxJO00dTzrF9H1F6kqIIl/72wJpyaEf4Fljq36NwffN7AlUDlZDkrgmP2uqhz38DmUC/lDq+4I03dSr8Roz2QRjvA2rcp2jOpKFPrpgqKWqa6ycwE7StBcJTl2kQ5G5sYVqsRIHqVKEzOU65Mft2x8ysBpxMXNYpD8MYxA+mcr3ulsnl7w1skmg/Ln4AfpPFdz30DsE4FOE+qMLDNuI1WnDvzp5n29CvOvTS5KOVNPKwjVli3NZ0/yMfBrqsOwqoSa3Qm2KhqAhaO2B6uS [...]
   },
   "Metadata": {
    "aws:cdk:path": "InfraStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "SsmParameterValueTaskFlaskIMAGETAGC96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/Task/Flask/IMAGE_TAG"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
